--- a/app.ini
+++ b/app.ini
@@ -1,12 +1,12 @@
 [app]
-name = sipros
+name = sipros-ensemble
 version = 1.3
-bundle = sipros-1.3
+bundle = sipros-ensemble-1.3
 
 [docker]
 username = wallen
 organization = wallen
-repo = sipros
+repo = sipros-ensemble
 tag = 1.3
 dockerfile = Dockerfile
 
